# llm-chatbot-projects

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  student.db
.devcontainer/: devcontainer.json
LangChain/Pdf/data/text_files/: python_intro.txt
LangChain/Pdf/data/vector_store/: chroma.sqlite3
LangChain/Pdf/notebook/: assignment-rag.ipynb  document.ipynb  pdf_loader.ipynb
LangChain/Pdf/notebook/rag_documents/: faiss.index  metadata.pk1
LangChain/Pdf/src/: app.py  data_loader.py  embedding.py  search.py  vectorstore.py
LangChain/Text to SQL/: app.py  sql.py
LangChain/ai-agent/10_project_shopping_agent/: README.md  reviews_api.py  shopping_agent.py  store.db
LangChain/ai-agent/11_project_telecom_chatbot/: README.md  app.py  ingest_faq.py
LangChain/ai-agent/11_project_telecom_chatbot/chroma_store/: chroma.sqlite3
LangChain/ai-agent/11_project_telecom_chatbot/resources/: demo.mov
LangChain/ai-agent/1_simple_llm_calling/: call_llm.ipynb
LangChain/ai-agent/2_health_analysis/: blood_work_analysis.ipynb
LangChain/ai-agent/3_vector_db/: vector_db_basics.ipynb
LangChain/ai-agent/4_rag_basics/: rag.ipynb
LangChain/ai-agent/5_Single_agent/: product_query_agent.ipynb
LangChain/ai-agent/6_memory/: product_query_agent_with_memory.ipynb
LangChain/ai-agent/7_multimodal/: multimodal_demo.ipynb
LangChain/ai-agent/8_guardrails/: guardrails.py
LangChain/ai-agent/9_eval/: func_eval.py  inventory_agent.py  utils.py
chroma_store/: chroma.sqlite3
