[project]
name = "tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "qdrant-client>=1.9.0",
    "torchvision>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "black"
]

[tool.uv]
constraint-dependencies = [
    "onnxruntime<=1.23.2"
]